feat(web/server): search with multiple tags
